--- a/哐哐.html
+++ b/哐哐.html
@@ -22,8 +22,8 @@
       line-height:1.7;
       ">
 	  <h1>原神启动！</h1>
-    <p>奥里给！</a></p>
-    <p>我真特莫牛逼</p>
+          <p>奥里给！</a></p>
+          <p>我真特莫牛逼</p>
 	  <p>我要放个东西</p>
 	  <p>当当当当！</p>
 	  <p>吼吼吼吼！</p>
@@ -35,7 +35,7 @@
       "
 
     <P>版权所有：kuangkuang.com </p>
-    <a href="https://zzqkuangkuang.github.io/01/%E5%93%90%E5%93%90%E7%9A%84%E4%B8%96%E7%95%8C.html">我的网站</p>
+    <a href="https://zzqkuangkuang.github.io/01/%E5%93%90%E5%93%90%E7%9A%84%E4%B8%96%E7%95%8C.html">我的网站：哐哐.com</a>
     </div>
   </body>
 </html>
