--- a/闲鱼.html
+++ b/闲鱼.html
@@ -28,7 +28,7 @@
     <div>
       <p>日记版权：闲鱼</p>
       <a
-        href="https://zzqkuangkuang.github.io/02/闲鱼.com"
+        href="https://zzqkuangkuang.github.io/02/闲鱼.html"
         >我的网站：闲鱼.com</a
       >
     </div>
