--- a/哐哐的世界.html
+++ b/哐哐的世界.html
@@ -20,7 +20,7 @@
     <P>我喜欢玩原神，你喜欢吗？</p>
     <p>我运气超好！这次卡池我没歪的唉！哈哈哈哈！</p>
     <p>原神启动！</p>
-     <img src="https://s21.ax1x.pFHcDc4com/2024/04/03/.jpg" alt="logo" width="400px" height="300px">
+     <img src="https://s21.ax1x.com/2024/04/16/pFxBxa9.jpg" alt="logo" width="400px" height="300px">
     <p>那位来客</p>
     </div>
     <div style=" 
